tests/fail.m31.ref
The command failed with error:
File "./fail.m31", line 2, characters 6-9: expected a product but got
⊢ Type
type
File "./fail.m31", line 4, characters 1-9: expected to fail but computed
⊢ Type : Type
