tests/fail.m31

dont Type Type

dont Type

(* this never happens *)
dont let x = Type in y y

